--- a/style.scss
+++ b/style.scss
@@ -12,8 +12,8 @@ main {
 }
 
 button {
-  font-size: 5vh;
-  font-weight: 200;
+  font-size: 4rem;
+  font-weight: 300;
   color: #444a66;
   border-style: none;
   padding: 2rem;
@@ -25,18 +25,22 @@ main {
     flex-direction: column;
     text-align: right;
     color: white;
-    font-size: 10rem;
+    font-size: 6rem;
     justify-content: center;
-    margin-right: 4rem;
+    margin-right: 3rem;
+
     grid-area: display;
+    overflow: scroll;
+    word-wrap: break-word;
+
   }
   #ac {
     grid-area: ac;
   }
-  #plus-minus {
+  #sign {
     grid-area: plus-minus;
   }
-  #percent {
+  #percentage {
     grid-area: percent;
   }
   #division {
@@ -63,7 +67,7 @@ main {
   #six {
     grid-area: six;
   }
-  #minus {
+  #subtraction {
     grid-area: minus;
   }
   #one {
@@ -75,7 +79,7 @@ main {
   #three {
     grid-area: three;
   }
-  #plus {
+  #addition {
     grid-area: plus;
   }
   #zero {
@@ -104,6 +108,7 @@ main {
   background-color: #1b191c;
   display: grid;
   height: 100vh;
+  width: 100%;
   gap: 1px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1.5fr repeat(5, 1fr);
