--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,7 @@ main {
 button {
   font-size: 4rem;
   font-weight: 300;
-  color: #444a66;
+  color: #323540;
   border-style: none;
   padding: 2rem;
   text-align: center;
@@ -29,9 +29,8 @@ main {
     font-size: 6rem;
     justify-content: center;
     margin-right: 3rem;
-
     grid-area: display;
-    overflow: scroll;
+    overflow: hidden;
     word-wrap: break-word;
   }
   #ac {
@@ -94,18 +93,20 @@ main {
   }
 
   .dark-gray {
-    background-color: #c9c8cd;
+    background-color: #6fb0d9;
+    color: #323540;
   }
 
   .gray {
-    background-color: #e0e1e6;
+    background-color: #805555;
+    color: white;
   }
 
   .purple {
-    background-color: #5d4980;
-    color: white;
+    background-color: #72ccbe;
+    color: #323540;
   }
-  background-color: #1b191c;
+  background-color: #2e2b33;
   display: grid;
   height: 100vh;
   width: 100%;
