--- a/style.scss
+++ b/style.scss
@@ -1,27 +1,21 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html {
-  font-size: 62.5%;
-}
+@import "grid-areas";
+@import "global";
 
 main {
-  font-family: "Inconsolata", monospace;
-}
-
-button {
-  font-size: 4rem;
-  font-weight: 300;
-  color: #323540;
-  border-style: none;
-  padding: 2rem;
-  text-align: center;
-}
-
-main {
-  #display {
+  display: grid;
+  height: 100vh;
+  gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1.5fr repeat(5, 1fr);
+  grid-template-areas:
+    "display display display display"
+    "ac plus-minus percentage division"
+    "seven eight nine multiplication"
+    "four five six minus"
+    "one two three plus"
+    "zero zero dot equal";
+  header {
+    background-color: #212121;
     display: flex;
     flex-direction: column;
     text-align: right;
@@ -32,92 +26,16 @@ main {
     grid-area: display;
     overflow: hidden;
     word-wrap: break-word;
-  }
-  #ac {
-    grid-area: ac;
-  }
-  #sign {
-    grid-area: plus-minus;
-  }
-  #percentage {
-    grid-area: percentage;
-  }
-  #division {
-    grid-area: division;
-  }
-  #seven {
-    grid-area: seven;
-  }
-  #eight {
-    grid-area: eight;
-  }
-  #nine {
-    grid-area: nine;
-  }
-  #multiplication {
-    grid-area: multiplication;
-  }
-  #four {
-    grid-area: four;
-  }
-  #five {
-    grid-area: five;
-  }
-  #six {
-    grid-area: six;
-  }
-  #subtraction {
-    grid-area: minus;
-  }
-  #one {
-    grid-area: one;
-  }
-  #two {
-    grid-area: two;
-  }
-  #three {
-    grid-area: three;
-  }
-  #addition {
-    grid-area: plus;
-  }
-  #zero {
-    grid-area: zero;
-  }
-  #dot {
-    grid-area: dot;
-    font-weight: 600;
-  }
-  #equal {
-    grid-area: equal;
+    #display {
+    }
   }
 
-  .dark-gray {
-    background-color: #6fb0d9;
-    color: #323540;
+  .action {
+    background-color: #3d5afe;
+    color: #fafafa;
   }
 
-  .gray {
-    background-color: #805555;
-    color: white;
+  .number {
+    background-color: #fafafa;
   }
-
-  .purple {
-    background-color: #72ccbe;
-    color: #323540;
-  }
-  background-color: #2e2b33;
-  display: grid;
-  height: 100vh;
-  width: 100%;
-  gap: 1px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1.5fr repeat(5, 1fr);
-  grid-template-areas:
-    "display display display display"
-    "ac plus-minus percentage division"
-    "seven eight nine multiplication"
-    "four five six minus"
-    "one two three plus"
-    "zero zero dot equal";
 }
