--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+main header {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: screen;
+}
+
 #ac {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
@@ -132,10 +139,8 @@ button {
   font-size: 4.8rem;
   border-style: solid;
   border-color: #f5f5f5;
-  padding: 2rem;
   text-align: center;
   border-radius: 20px;
-  font-weight: 100;
   -webkit-box-shadow: 0px 2px 4px rgba(33, 33, 33, 0.25);
           box-shadow: 0px 2px 4px rgba(33, 33, 33, 0.25);
 }
@@ -147,31 +152,24 @@ main {
   gap: 10px;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  -ms-grid-rows: 1.5fr (1fr)[5];
-      grid-template-rows: 1.5fr repeat(5, 1fr);
-      grid-template-areas: "display display display display" "ac plus-minus percentage division" "seven eight nine multiplication" "four five six minus" "one two three plus" "zero zero dot equal";
+  -ms-grid-rows: 30vh (1fr)[5];
+      grid-template-rows: 30vh repeat(5, 1fr);
+      grid-template-areas: "screen screen screen screen" "ac plus-minus percentage division" "seven eight nine multiplication" "four five six minus" "one two three plus" "zero zero dot equal";
 }
 
 main header {
   background-color: #212121;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: right;
-  color: white;
-  font-size: 6rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-right: 3rem;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 4;
-  grid-area: display;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+main header #display {
+  text-align: right;
+  color: #fafafa;
+  font-size: 6.4rem;
   overflow: hidden;
   word-wrap: break-word;
 }
