--- a/_global.scss
+++ b/_global.scss
@@ -1,3 +1,4 @@
+@import "variables";
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +16,6 @@ button {
   border-style: solid;
   border-color: #f5f5f5;
   text-align: center;
-  border-radius: 20px;
+  border-radius: $radius;
   box-shadow: 0px 2px 4px rgba($color: #212121, $alpha: 0.25);
 }
