--- a/_global.scss
+++ b/_global.scss
@@ -3,19 +3,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 html {
   font-size: 62.5%;
 }
-body {
-  font-family: "Roboto", sans-serif;
-}
 
-button {
-  font-size: 4.8rem;
-  border-style: solid;
-  border-color: #f5f5f5;
-  text-align: center;
-  border-radius: $radius;
-  box-shadow: 0px 2px 4px rgba($color: #212121, $alpha: 0.25);
+h1 {
+  font-weight: 400;
 }
