--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ main {
     }
   }
   div {
-    margin: 10px;
+    margin: 5%;
     height: 70vh;
     display: grid;
     gap: 10px;
@@ -37,6 +37,7 @@ main {
       "four five six minus"
       "one two three plus"
       "zero zero dot equal";
+
     .action {
       background-color: #3d5afe;
       color: #fafafa;
@@ -48,6 +49,36 @@ main {
     #dot {
       background-color: #fafafa;
       color: #212121;
+    }
+    button {
+      font-weight: 300;
+      font-size: 4.8rem;
+      border-style: solid;
+      border-color: #f5f5f5;
+      text-align: center;
+      border-radius: $radius;
+      box-shadow: 0px 2px 4px rgba($color: #212121, $alpha: 0.25);
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+}
+
+@media (max-width: 376px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (min-width: 426px) {
+  body {
+    background-color: #ff8257;
+    main {
+      width: 40rem;
+      height: 100vh;
+      margin: auto;
+      background-color: #fafafa;
     }
   }
 }
