--- a/style.scss
+++ b/style.scss
@@ -61,6 +61,9 @@ main {
       &:focus {
         outline: none;
       }
+      &:active {
+        animation: zoom 0.2s;
+      }
     }
   }
 }
@@ -80,5 +83,14 @@ main {
       margin: auto;
       background-color: #fafafa;
     }
+  }
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(1, 1);
+  }
+  to {
+    transform: scale(1.1, 1.1);
   }
 }
